Deprecate use of user gestures during scroll-related touch events

See https://docs.google.com/document/d/1oF1T3O7_E4t1PYHV6gyCwHxOi3ystm0eSL5xZu7nvOg/edit#heading=h.qq59ev3u8fba

Intent to deprecate: https://groups.google.com/a/chromium.org/forum/#!topic/blink-dev/2cvwbgZOZZs

This also contains a small tweak to the semantics of the TouchScrollStarted event to trigger it only on the first GestureScrollUpdate (so that it's not triggered when the page consumes all touchmove events).

BUG=611981

Review-Url: https://codereview.chromium.org/1996143002
Cr-Commit-Position: refs/heads/master@{#396215}

Former-commit-id: adbb8a0133bf42306ac4a533a5478529e5d87895