third_party/WebKit/Source/core/frame/Deprecation.cpp
@@ -393,6 +393,15 @@ String Deprecation::deprecationMessage(UseCounter::Feature feature)
     case UseCounter::UnloadHandler_Navigation:
         return "Navigating in the unload handler is deprecated and will be removed.";
 
+    case UseCounter::TouchStartUserGestureUtilized:
+        return willBeRemoved("Performing operations that require explicit user interaction on touchstart events", 54, "5649871251963904");
+
+    case UseCounter::TouchMoveUserGestureUtilized:
+        return willBeRemoved("Performing operations that require explicit user interaction on touchmove events", 54, "5649871251963904");
+
+    case UseCounter::TouchEndDuringScrollUserGestureUtilized:
+        return willBeRemoved("Performing operations that require explicit user interaction on touchend events that occur as part of a scroll", 54, "5649871251963904");
+
     // Features that aren't deprecated don't have a deprecation message.
     default:
         return String();
