third_party/WebKit/LayoutTests/fast/events/touch/resources/touch-stale-node-crash.js
@@ -4,7 +4,6 @@ function touchStartHandler(e)
 {
     var target = e.touches[0].target;
     document.body.removeChild(target);
-    window.location = 'resources/send-touch-up.html';
 }
 
 description("If this test does not crash then you pass!");
@@ -16,5 +15,6 @@ if (window.eventSender) {
     eventSender.clearTouchPoints();
     eventSender.addTouchPoint(50, 150);
     eventSender.touchStart();
+    window.location = 'resources/send-touch-up.html';
 } else
     debug('This test requires DRT.');
